make drafts public

--- a/_config.yml
+++ b/_config.yml
@@ -84,3 +84,17 @@ exclude:
   - LICENSE
   - README.md
   - CNAME
+
+collections:
+  drafts:
+    output: true
+
+defaults:
+  -
+    scope:
+      path: "/_drafts"
+    values:
+      type: draft
+      layout: draft
+      meta_robots:  noindex
+      sitemap: false
