--- a/_config.yml
+++ b/_config.yml
@@ -92,9 +92,7 @@ collections:
 defaults:
   -
     scope:
-      path: "/_drafts"
-    values:
+      path: ""
       type: draft
+    values:
       layout: draft
-      meta_robots:  noindex
-      sitemap: false
