Change about, add rooftop-seg post, change index page

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Kevin Kepp
 
 # Short bio or description (displayed in the header)
-description: Machine Learning Student from Berlin, Germany
+description: Software Engineer from Berlin, Germany
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars3.githubusercontent.com/u/787153?s=460&v=4
