--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: kevinkepp/kevinkepp.github.io
+  github: kevinkepp
   instagram:
   linkedin:
   pinterest:
